2007-04-20  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/search.py (DateSearchFilter): Make sure that you cannot
	select a start date after the end date and an end date before the 
	start date. Add some comments explaning what's going on since the
	code is not that trivial any longer.

2007-04-19  Johan Dahlin  <jdahlin@async.com.br>

	* README: Mention that SQLObject is an optional dependency

	* kiwi/db/__init__.py:
	* kiwi/db/query.py:
	* kiwi/db/sqlobj.py:
	* kiwi/enums.py:
	* kiwi/interfaces.py:
	* kiwi/ui/search.py:

	Add a SearchContainer plus database independent infrastructure to
	construct queries. Include a SQLObject plugin

2007-04-19  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/combo.py (ProxyComboBoxEntry.insert_item)
	(ProxyComboBox.insert_item, _EasyComboBoxHelper.insert_item): 
	Implement insert_item.

2007-04-18  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/dateentry.py (DateEntry.set_date): Allow None which 
	means reset the date
	(DateEntry.get_date): Never return ValueUnset.

	* kiwi/ui/objectlist.py (ObjectList.sort_by_attribute): 
	Add. Fixes #3311, based on patch by Ali Afshar.

2007-04-16  Ali Afshar <aafshar@gmail.com>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/objectlist.py:
	Do not set a pixbuf if the data value is None. Fixes #3310

	* kiwi/ui/objectlist.py: 
	Set the sort columnm id so the columns end up sorted. Fixes #3032

2007-04-10  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/proxywidget.py (ProxyWidgetMixin._as_string): Provide
	a default (string) converter if none is set.

2007-04-08  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/ui/widgets/entry.py (ProxyEntry.__post_init__): Remove
	dirty idle add hack and use __post_init__ instead.

	* kiwi/utils.py (PropertyObject.__post_init__): Add a hook which is
	called after the object construction is finished.

2007-04-03  Johan Dahlin  <jdahlin@async.com.br>

	* kiwi/environ.py (Environment.add_resource): Do not append the same resource